--- a/appWeb/public/css/productDetail-styles.css
+++ b/appWeb/public/css/productDetail-styles.css
@@ -19,6 +19,7 @@ header{
   background-color: #285A71;
   position: fixed;
   top: 0;
+  border-radius: 5px;
 }
 
 div.cart{
@@ -100,6 +101,7 @@ form.search input{
 
 section{
   margin: 122px 10px 20px 10px;
+  padding: 5px;
   background-color: #FBFCFC;
   width: 95%;
 }
@@ -121,6 +123,7 @@ section article{
 section article div{
   margin-bottom: 10px;
   box-shadow: 0px 0px 30px rgb(100, 100, 100);
+  padding: 10px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -131,9 +134,10 @@ section article div img{
   object-fit: contain;
 }
 
-div.descripcion{
+.descripcion{
   width: 50%;
   padding: 5px;
+  border-radius: 5px;
 }
 
 .descripcion h5{
@@ -165,12 +169,13 @@ div.descripcion{
   width: 50%;
   padding: 5px 0px 3px 0px;
   font-weight: bold;
-  margin: 5px 5px 7px 0px;
+  margin: 5px 7px 7px 0px;
+  font-size: 13px;
 }
 
 .descripcion input{
    width: 40%;
-   margin: 5px 0 7px 0;
+   margin: 5px 0 7px 0px;
    border-radius: 5px;
 }
 
@@ -192,12 +197,13 @@ footer{
   padding: 15px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 footer div ul li a{
   text-decoration: none;
   color: #000000;
+  font-size: 12px;
 }
 
 .footer-shop{
@@ -207,12 +213,16 @@ footer div ul li a{
 }
 
 .footer-laEscondida{
-  width: 20%;
+  width: 50%;
   margin: 0px 5px 5px 5px;
 }
 
+div.footer-laEscondida h4{
+  font-size: 15px;
+}
+
 .footer-email{
-  width: 30%;
+  width: 40%;
   margin: 0px 5px 5px 5px;
   display: none;
 }
@@ -224,7 +234,7 @@ form.footer-email input{
 }
 
 .footer-redesSociales{
-  width: 20%;
+  width: 30%;
   margin: 0px 5px 5px 5px;
   display: flex;
   flex-direction: row;
@@ -237,10 +247,26 @@ footer div.footer-redesSociales img{
 }
 
 .footer-metodosDePago{
-text-align: center;
-display: flex;
-border-top: solid 2px #000000;
-padding: 2px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  border-top: solid 2px #000000;
+  padding: 2px;
+  margin: 0;
+  background-color: #C4B7B4;
+}
+
+.footer-metodosDePago h4{
+   font-size: 18px;
+}
+
+.footer-metodosDePago h3{
+  font-size: 15px;
+}
+
+.footer-metodosDePago article{
+  background-color: #C4B7B4;
+  box-shadow: 0 0 0;
 }
 
 .copy-footer{
@@ -250,6 +276,7 @@ padding: 2px;
 .parrafo-footer{
   font-size: 12px;
   line-height:1.5;
+  display: none;
 }
 
 .icon-metodosDePago{
@@ -259,4 +286,12 @@ padding: 2px;
   padding: 10px;
   font-size: 20px;
   margin-bottom: 10px;
+}
+
+@media (min-width: 481){
+
+  .descripcion button{
+    width: 60%;
+    height: 50px;
+  }
 }
