--- a/appWeb/views/home.html
+++ b/appWeb/views/home.html
@@ -37,47 +37,47 @@
             <i class="fas fa-search"></i>
         </form>
     </header>
+    <main>
+        <div class="slider">
 
-    <div class="slider">
+            <ul>
+                <li>
+                    <img src="/images/Para-el-home/tipos-de-vinos.jpg" alt="Cervezas varias" />
+                </li>
+                <li>
+                    <img src="/images/Para-el-home/cervezas-varias.jpg" alt="Cervezas varias" />
+                </li>
+                <li>
+                    <img src="/images/Para-el-home/tipos-de-vinos-tintos.jpg" alt="Vinos varios" />
+                </li>
+                <li>
+                    <img src="/images/Para-el-home/bebidas-destiladas.png" alt="Bebidas Destiladas varias" />
+                </li>
+            </ul>
 
-        <ul>
-            <li>
-                <img src="/images/Para-el-home/tipos-de-vinos.jpg" alt="Cervezas varias" />
-            </li>
-            <li>
-                <img src="/images/Para-el-home/cervezas-varias.jpg" alt="Cervezas varias" />
-            </li>
-            <li>
-                <img src="/images/Para-el-home/tipos-de-vinos-tintos.jpg" alt="Vinos varios" />
-            </li>
-            <li>
-                <img src="/images/Para-el-home/bebidas-destiladas.png" alt="Bebidas Destiladas varias" />
-            </li>
-        </ul>
+        </div>
 
-    </div>
+        <section>
+            <ul>
+                <div class="product-cerveza">
+                    <li><a href="/productDetail"><img src="/images/Para-el-home/cervezas.jpg" alt="Cervezas"></a></li>
+                    <label><a href="/productDetail">CERVEZAS</a></label>
 
-    <section>
-        <ul>
-            <div class="product-cerveza">
-                <li><a href="/productDetail"><img src="/images/Para-el-home/cervezas.jpg" alt="Cervezas"></a></li>
-                <label><a href="/productDetail">CERVEZAS</a></label>
+                </div>
 
-            </div>
+                <div class="product-vinos">
+                    <li><a href="/productDetail"><img src="/images/Para-el-home/vinos.jpg" alt="Vinos"></a></li>
+                    <label><a href="/productDetail">VINOS</a></label>
+                    <p class="comentario">Vinos tintos, blancos, rosados y espumantes</p>
+                </div>
 
-            <div class="product-vinos">
-                <li><a href="/productDetail"><img src="/images/Para-el-home/vinos.jpg" alt="Vinos"></a></li>
-                <label><a href="/productDetail">VINOS</a></label>
-                <p class="comentario">Vinos tintos, blancos, rosados y espumantes</p>
-            </div>
-
-            <div class="product-licores">
-                <li><a href="/productDetail"><img src="/images/Para-el-home/licor.jpg" alt="Licores"></a></li>
-                <label><a href="/productDetail">LICORES</a></label>
-            </div>
-        </ul>
-    </section>
-
+                <div class="product-licores">
+                    <li><a href="/productDetail"><img src="/images/Para-el-home/licor.jpg" alt="Licores"></a></li>
+                    <label><a href="/productDetail">LICORES</a></label>
+                </div>
+            </ul>
+        </section>
+    </main>
     <footer>
         <div class="footer-shop">
             <h4>Tienda</h4>
