--- a/appWeb/views/home.html
+++ b/appWeb/views/home.html
@@ -17,6 +17,7 @@
     <header>
         <div class="cart">
             <a href="/productCart"><i class="fas fa-shopping-cart"></a></i>
+            <figcaption class="caption">Mis compras</figcaption>
         </div>
 
         <div class="logo">
