--- a/appWeb/views/login.html
+++ b/appWeb/views/login.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Escondida</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/css/register-&-login-styles.css">
     <link rel="stylesheet" href="/css/home-styles.css">
 </head>
-
-<body>
     <header>
         <div class="cart">
             <a href="/productCart"><i class="fas fa-shopping-cart"></a></i>
+            <figcaption class="caption">Mis compras</figcaption>
         </div>
 
         <div class="logo">
@@ -35,20 +34,23 @@
             <i class="fas fa-search"></i>
         </form>
     </header>
-
-    <section class="form-register">
+<body>
+    <section class="form-login">
         <h4>Iniciar sesión </h4>
         <main>
             <section>
                 <form action="/" method="POST" class="formlogin">
+                    <label>Email</label>
                     <input type="text" name="email" required placeholder="Tu dirección de correo">
+                    <label>Contraseña</label>
                     <input type="password" name="password" required placeholder="Contraseña">
-                    <p>¿Olvidaste tu contraseña?</p>
+                    <p><a href=#>¿Olvidaste tu contraseña?</a></p>
                     <button type="submit">Enviar</button>
                 </form>
             </section>
         </main>
     </section>
+    </body>
     <footer>
         <div class="footer-shop">
             <h4>Tienda</h4>
@@ -82,14 +84,14 @@
             <h4>Metodos de pago</h4>
 
             <article>
-                <i class="fas fa-credit-card icon-footer"></i>
+                <i class="fas fa-credit-card icon-metodosDePago"></i>
                 <h3>Paga con tarjeta o efectivo</h3>
                 <p class="parrafo-footer">En La Escondida, tenés cuotas sin interés con tarjeta o efectivo en
                     forma de pago. ¡Y siempre es seguro!
                 </p>
             </article>
             <article>
-                <i class="fas fa-gift icon-footer"></i>
+                <i class="fas fa-truck icon-metodosDePago"></i>
                 <h3>Envío gratis desde $ 2.500</h3>
                 <p class="parrafo-footer">
                     Solo por estar registrad@ en La Escondida tenés envíos gratis en miles de
@@ -100,3 +102,4 @@
 
     </footer>
 </body>
+        
