--- a/appWeb/views/register.html
+++ b/appWeb/views/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Escondida</title>
+    <title>Registrate</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/css/register-&-login-styles.css">
     <link rel="stylesheet" href="/css/home-styles.css">
@@ -15,6 +15,7 @@
     <header>
         <div class="cart">
             <a href="/productCart"><i class="fas fa-shopping-cart"></a></i>
+            <figcaption class="caption">Mis compras</figcaption>
         </div>
 
         <div class="logo">
@@ -51,7 +52,7 @@
                     <input type="password" name="repassword" required placeholder="Confirmar Contraseña">
                     <label>Fecha de Nacimiento</label>
                     <input type="date" name="birth" required>
-                    <p>¿Ya tenés una cuenta? Iniciá sesión</p>
+                    <p><a href=#>¿Ya tenés una cuenta? Iniciá sesión</a></p>
                     <button type="submit">Crear cuenta</button>
                 </form>
             </section>
@@ -90,14 +91,14 @@
             <h4>Metodos de pago</h4>
 
             <article>
-                <i class="fas fa-credit-card icon-footer"></i>
+                <i class="fas fa-credit-card icon-metodosDePago"></i>
                 <h3>Paga con tarjeta o efectivo</h3>
                 <p class="parrafo-footer">En La Escondida, tenés cuotas sin interés con tarjeta o efectivo en
                     forma de pago. ¡Y siempre es seguro!
                 </p>
             </article>
             <article>
-                <i class="fas fa-gift icon-footer"></i>
+                <i class="fas fa-truck icon-metodosDePago"></i>
                 <h3>Envío gratis desde $ 2.500</h3>
                 <p class="parrafo-footer">
                     Solo por estar registrad@ en La Escondida tenés envíos gratis en miles de
