--- a/appWeb/src/views/users/login.ejs
+++ b/appWeb/src/views/users/login.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"></html>
   <!--HEAD-->
-  <%- include('./partials/head') %>
+  <%- include('../partials/head.ejs') %>
   <body>
   
     <!-- Header -->
-    <%- include('./partials/header')%>
+    <%- include('../partials/header')%>
 
     <!-- Page content -->
     <body>
@@ -26,7 +26,7 @@
         </section>
         </body>
     <!-- Footer -->
- <%- include('./partials/footer') %>
+ <%- include('../partials/footer') %>
 </div>
 </body>
 </html>       
