--- a/appWeb/src/views/users/register.ejs
+++ b/appWeb/src/views/users/register.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"></html>
   <!--HEAD-->
-  <%- include('./partials/head') %>
+  <%- include('../partials/head') %>
   <body>
   
     <!-- Header -->
-    <%- include('./partials/header')%>
+    <%- include('../partials/header')%>
 
     <!-- Page content -->
     <section class="form-register">
@@ -30,7 +30,7 @@
         </main>
     </section>
     <!-- Footer -->
-    <%- include('./partials/footer') %>
+    <%- include('../partials/footer') %>
 </div>
 </body>
 </html>
