carrito de compras

--- a/appWeb/public/css/carrito-styles.css
+++ b/appWeb/public/css/carrito-styles.css
@@ -53,7 +53,7 @@ main{
     padding: 1% 2%;
     text-align: center;
 }
-/* ===================================== COMIENZO MEDIA QUERIES =============================================== */
+/* ===================================== MEDIA QUERIES =============================================== */
     /* ======================================= 0 ===================================== */
         @media screen and (min-width:768px){
     /* =============================================================================== */  
