terminando las funciones delete y create

--- a/appWeb/src/views/products/registerProduct.ejs
+++ b/appWeb/src/views/products/registerProduct.ejs
@@ -16,13 +16,13 @@
                     <label for="name">Nombre</label>
                     <input type="text" name="name" required placeholder="Nombre de la bebida" id="name">
                     <label for="description">Descripcion</label>
-                    <input type="text" name="descripcion" id="description">
+                    <textarea type="text" name="descripcion" id="description"></textarea>
                     <label for="product-image">Imagen de la bebida</label>
                     <input type="file" name="product-image" id="product-image">
                     <label for="category">Categoria</label>
                     <input type="text" name="category" required placeholder="categoria de la bebida" id="category">
                     <label for="size">Tamaño</label>
-                    <input type="number" name="size" required id="size">
+                    <input type="text" name="size" required id="size">
                     <label for="price">Precio</label>
                     <input type="number" name="price" required id="price">
 
