--- a/appWeb/src/views/products/productId.ejs
+++ b/appWeb/src/views/products/productId.ejs
@@ -65,7 +65,7 @@
                 </h4>
                 </article>
         </section>
-        <a href="/products/edit/<%= productResult.id%>"><input type="submit" name="edit" value="Editar"></a>
+        <a href="/products/<%= productResult.id%>/edit"><input type="submit" name="edit" value="Editar"></a>
         <form action="/products/<%= productResult.id%>?_method=DELETE" method="POST" enctype="multipart/form-data">
         <input type="submit" name="eliminar" value="Eliminar">
         </form>
