--- a/appWeb/src/views/users/register.ejs
+++ b/appWeb/src/views/users/register.ejs
@@ -24,7 +24,7 @@
                     <label>Fecha de Nacimiento</label>
                     <input type="date" name="birth" required>
                     <label>Seleccione Avatar</label>
-                    <input type="file" name="image-avatar">
+                    <input type="file" name="image">
                     <p><a href='/login'>¿Ya tenés una cuenta? Iniciá sesión</a></p>
                     <button type="submit">Crear cuenta</button>
                 </form>
