--- a/appWeb/src/views/partials/footer.ejs
+++ b/appWeb/src/views/partials/footer.ejs
@@ -1,50 +1,54 @@
-<footer>
-    <div class="footer-shop">
-        <h4>Tienda</h4>
-        <ul>
-            <li><a href="/productDetail">Cerveza</a></li>
-            <li><a href="/productDetail">Vinos</a></li>
-            <li><a href="/productDetail">Otras Bebidas</a></li>
-        </ul>
-    </div>
+    <footer>
+        <div class="footer-shop">
+            <h4>Tienda</h4>
+            <ul>
+                <li><a href="/productDetail">Cerveza</a></li>
+                <li><a href="/productDetail">Vinos</a></li>
+                <li><a href="/productDetail">Otras Bebidas</a></li>
+            </ul>
+        </div>
 
-    <div class="footer-laEscondida">
-        <h4>La Escondida</h4>
-        <ul>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Sobre nosotros</a></li>
-        </ul>
-    </div>
+        <div class="footer-laEscondida">
+            <h4>La Escondida</h4>
+            <ul>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Sobre nosotros</a></li>
+            </ul>
+        </div>
 
-    <form action="/" method="POST" class="footer-email">
-        <input type="email" name="email" placeholder="Dejanos tu email...">
-        <i class="far fa-envelope"></i>
-    </form>
+        <form action="/" method="POST" class="footer-email">
+            <input type="email" name="email" placeholder="Dejanos tu email...">
+            <i class="far fa-envelope"></i>
+        </form>
 
-    <div class="footer-redesSociales">
-        <img src="/images/facebook.png" alt="Facebook">
-        <img src="/images/instagram.png" alt="Instagram">
-        <img src="/images/whatsapp.png" alt="whatsapp">
-    </div>
+        <div class="footer-redesSociales">
+            <img src="/images/facebook.png" alt="Facebook">
+            <img src="/images/instagram.png" alt="Instagram">
+            <img src="/images/whatsapp.png" alt="whatsapp">
+        </div>
 
-    <section class="footer-metodosDePago">
-        <h4>Metodos de pago</h4>
+        <section class="footer-metodosDePago">
+            <h4>Metodos de pago</h4>
 
-        <article>
-            <i class="fas fa-credit-card icon-metodosDePago"></i>
-            <h3>Paga con tarjeta o efectivo</h3>
-            <p class="parrafo-footer">En La Escondida, tenés cuotas sin interés con tarjeta o efectivo en
-                forma de pago. ¡Y siempre es seguro!
-            </p>
-        </article>
-        <article>
-            <i class="fas fa-truck icon-metodosDePago"></i>
-            <h3>Envío gratis desde $ 2.500</h3>
-            <p class="parrafo-footer">
-                Solo por estar registrad@ en La Escondida tenés envíos gratis en miles de
-                productos.
-            </p>
-        </article>
-    </section>
+            <article>
+                <i class="fas fa-credit-card icon-metodosDePago"></i>
+                <h3>Paga con tarjeta o efectivo</h3>
+                <p class="parrafo-footer">En La Escondida, tenés cuotas sin interés con tarjeta o efectivo en
+                    forma de pago. ¡Y siempre es seguro!
+                </p>
+            </article>
+            <article>
+                <i class="fas fa-truck icon-metodosDePago"></i>
+                <h3>Envío gratis desde $ 2.500</h3>
+                <p class="parrafo-footer">
+                    Solo por estar registrad@ en La Escondida tenés envíos gratis en miles de
+                    productos.
+                </p>
+            </article>
+        </section>
 
-</footer>
+    </footer>
+
+    </body>
+
+</html>
