--- a/appWeb/src/views/products/productIdEdit.ejs
+++ b/appWeb/src/views/products/productIdEdit.ejs
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html lang="en"></html>
   <!--HEAD-->
   <%- include('../partials/head') %>
-  <body>
   
     <!-- Header -->
     <%- include('../partials/header')%>
@@ -12,7 +9,7 @@
         <h4>Completa tus datos</h4>
         <main>
             <section>
-                <form action="/products/<%= productToEdit.id%>?_method=PUT" method="POST" class="formregister" enctype="multipart/form-data">
+                <form action="/products/<%= productToEdit.idProductos%>?_method=PUT" method="POST" class="formregister" enctype="multipart/form-data">
                     <label for="name">Nombre del Producto</label>
                     <input type="text" name="name" required value="<%= productToEdit.name%>" id="name">
 
@@ -21,10 +18,22 @@
                     
                     <label for="product-image">Imagen de la bebida</label>
                     <img src="/images/bebidas/<%= productToEdit.image%>" alt="<%= productToEdit.name%>">
-                    <input type="file" name="product-image" id="product-image">
+                    <input type="file" name="product-image" id="product_image">
                     
                     <label for="category">Categoria</label>
-                    <input type="text" name="category" required value="<%= productToEdit.category%>" id="category">
+                    <select name ="category">
+                        <% for(let i = 0; i < categorias.length;i++) { %>
+                            <%if(categorias[i].idCategoria == productToEdit.Categoria_id){ %>
+                               <option value ="<%= categorias[i].idCategoria %>" selected>
+                               <%= categorias[i].name %>
+                           </option>
+                            <% } else { %>
+                            <option value ="<%= categorias[i].idCategoria %>">
+                                <%= categorias[i].name %>
+                            </option>
+                               <% }  %>
+                        <% } %>
+                    </select>                   
                     
                     <label for="size">Tamaño</label>
                     <input type="text" name="size" required id="size" value="<%= productToEdit.size%>">
@@ -38,7 +47,4 @@
         </main>
     </section>
     <!-- Footer -->
-    <%- include('../partials/footer') %>
-</div>
-</body>
-</html>
+<%- include('../partials/footer') %>
