--- a/appWeb/src/views/products/registerProduct.ejs
+++ b/appWeb/src/views/products/registerProduct.ejs
@@ -18,9 +18,15 @@
                     <label for="description">Descripcion</label>
                     <textarea type="text" name="descripcion" id="description"></textarea>
                     <label for="product-image">Imagen de la bebida</label>
-                    <input type="file" name="product-image" id="product-image">
+                    <input type="file" name="product-image" id="product_image">
                     <label for="category">Categoria</label>
-                    <input type="text" name="category" required placeholder="categoria de la bebida" id="category">
+                    <select name ="category">
+                        <% for(let i = 0; i < categorias.length;i++) { %>
+                           <option value ="<%= categorias[i].idCategoria %>">
+                               <%= categorias[i].name %>
+                           </option>
+                        <% } %>
+                    </select>>
                     <label for="size">Tamaño</label>
                     <input type="text" name="size" required id="size">
                     <label for="price">Precio</label>
